objects/pse__Milestone__c.object
<CustomObject>
    <customHelpPage>pse__MilestoneHelp</customHelpPage>
    <description>A target event used to track project progress. In Time and Materials (T&amp;M) projects, individual milestone records are generally not billable, whereas in Fixed Price or mixed projects all or some generally are. You can group together timecards and expenses, submitted by assigned resources, with milestones on the same project, or associate milestones with a fixed external cost. Milestones have a linear (non-hierarchical) relationship with one another.</description>
    <fields>
        <fullName>Milestone_Comments__c</fullName>
        <label>Milestone Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Milestone_Number__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Sequential Number of Project Milestone</inlineHelpText>
        <label>Milestone Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Milestone_Sequence__c</fullName>
        <description>Milestone number in relation with total number of milestones on Project</description>
        <formula>TEXT(Milestone_Number__c)   &amp; &apos; of &apos; &amp;   TEXT(pse__Project__r.Milestone_Count__c)</formula>
        <inlineHelpText>Milestone number in relation with total number of milestones on Project</inlineHelpText>
        <label>Milestone Sequence</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Milestone_Status__c</fullName>
        <formula>TEXT(pse__Status__c )</formula>
        <label>Milestone Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Milestone_Value__c</fullName>
        <formula>pse__Milestone_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Milestone Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Percent_To_Bill__c</fullName>
        <description>Created as part of DPS-15988</description>
        <label>Percent To Bill</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Send_Notification_Before_Days__c</fullName>
        <defaultValue>10</defaultValue>
        <label>Send Notification Before (# Days)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Send_Notification_On_Date__c</fullName>
        <formula>pse__Target_Date__c -  Send_Notification_Before_Days__c - 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Send Notification On Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Action_Refresh_Expense_Rollups__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked on save, recalculates information from expenses associated with the milestone.</description>
        <inlineHelpText>If checked on save, recalculates information from expenses associated with the milestone.</inlineHelpText>
        <label>Action: Refresh Expense Roll-Ups</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Action_Refresh_Timecard_Rollups__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked on save, recalculates information from timecards associated with the milestone.</description>
        <inlineHelpText>If checked on save, recalculates information from timecards associated with the milestone.</inlineHelpText>
        <label>Action: Refresh Timecard Roll-Ups</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Actual_Date__c</fullName>
        <inlineHelpText>Actual date of completion. Must be completed before you can include the milestone in financials.</inlineHelpText>
        <label>Actual Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Admin_Global_Edit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, allows Admin to make &apos;global&apos; changes to the Milestone, including edits to the Milestone&apos;s Project, Resource, Currency, or Date, even if Include In Financials is checked. Config requirement: Actuals Calculation Mode must be set to &apos;Scheduled&apos;.</description>
        <inlineHelpText>If checked, allows Admin to make &apos;global&apos; changes to the Milestone, including edits to the Milestone&apos;s Project, Resource, Currency, or Date, even if Include In Financials is checked. Config requirement: Actuals Calculation Mode must be set to &apos;Scheduled&apos;.</inlineHelpText>
        <label>Admin Global Edit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Apply_Default_Bill_Rate_to_Timecard__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, and if default-timecard-bill-rate-from-milestone config is set to true, Default Bill Rate will be defaulted onto any child Timecards.</description>
        <inlineHelpText>If checked, and if default-timecard-bill-rate-from-milestone config is set to true, Default Bill Rate will be defaulted onto any child Timecards.</inlineHelpText>
        <label>Apply Default Bill Rate to Timecard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox should be checked when the Milestone is approved - typically by a workflow driven by the Status field.</description>
        <inlineHelpText>This checkbox should be checked when the Milestone is approved - typically based on the Status field.</inlineHelpText>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Approved_for_Billing__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates whether the milestone is approved for billing. This field must be checked prior to Billing Generation.</inlineHelpText>
        <label>Approved for Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Approved_for_Vendor_Payment__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates whether it&apos;s OK to send an invoice to a vendor when invoicing costs for external resources.</inlineHelpText>
        <label>Approved for Vendor Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup to approval authority contact, usually a customer or partner.</inlineHelpText>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Milestones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Audit_Notes__c</fullName>
        <inlineHelpText>Audit notes for the business transaction.</inlineHelpText>
        <label>Audit Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>pse__Bill_Date__c</fullName>
        <inlineHelpText>Bill date for the milestone.</inlineHelpText>
        <label>Bill Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Bill_Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Transaction ID for the billing event related to the milestone</inlineHelpText>
        <label>Bill Transaction</label>
        <referenceTo>pse__Transaction__c</referenceTo>
        <relationshipLabel>Milestone (Bill Transaction)</relationshipLabel>
        <relationshipName>Bill_Tx_Milestones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Billable_Amount_In_Financials__c</fullName>
        <defaultValue>0.00</defaultValue>
        <inlineHelpText>Currency value of billable hours logged against the milestone that can be viewed in project and RPG actuals.</inlineHelpText>
        <label>Billable Amount In Financials</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Billable_Amount_Submitted__c</fullName>
        <defaultValue>0.00</defaultValue>
        <inlineHelpText>Currency value of billable hours logged against the milestone.</inlineHelpText>
        <label>Billable Amount Submitted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Billable_Days_In_Financials__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of billable days logged against the milestone that can be viewed in project and RPG actuals.</inlineHelpText>
        <label>Billable Days In Financials</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Billable_Days_Submitted__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of billable days logged against the milestone.</inlineHelpText>
        <label>Billable Days Submitted</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Billable_Expenses_In_Financials__c</fullName>
        <defaultValue>0.00</defaultValue>
        <inlineHelpText>Pass-through billable expenses logged against the milestone that can be viewed in project and RPG actuals.</inlineHelpText>
        <label>Billable Expenses In Financials</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Billable_Expenses_Submitted__c</fullName>
        <defaultValue>0.00</defaultValue>
        <inlineHelpText>Pass-through billable expenses logged against the milestone.</inlineHelpText>
        <label>Billable Expenses Submitted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Billable_Hours_In_Financials__c</fullName>
        <defaultValue>0.00</defaultValue>
        <inlineHelpText>Number of billable hours logged against the milestone that can be viewed in project and RPG actuals.</inlineHelpText>
        <label>Billable Hours In Financials</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Billable_Hours_Submitted__c</fullName>
        <defaultValue>0.00</defaultValue>
        <inlineHelpText>Number of billable hours logged against the milestone.</inlineHelpText>
        <label>Billable Hours Submitted</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Billed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates this milestone has been included in a billing event.</inlineHelpText>
        <label>Billed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Billing_Event_Invoiced__c</fullName>
        <description>Reflects Invoiced flag value on Billing Event Item&apos;s parent Billing Event</description>
        <formula>IF(OR(ISNULL(pse__Billing_Event_Item__c),ISBLANK(pse__Billing_Event_Item__c),ISNULL(pse__Billing_Event_Item__r.pse__Billing_Event__c),ISBLANK(pse__Billing_Event_Item__r.pse__Billing_Event__c)),$Label.pse__common_label_n_a,IF(pse__Billing_Event_Item__r.pse__Billing_Event__r.pse__Invoiced__c,$Label.pse__common_label_yes,$Label.pse__common_label_no))</formula>
        <label>Billing Event Invoiced</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Billing_Event_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup to the related Billing Event Item</inlineHelpText>
        <label>Billing Event Item</label>
        <referenceTo>pse__Billing_Event_Item__c</referenceTo>
        <relationshipLabel>Milestones</relationshipLabel>
        <relationshipName>Milestones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Billing_Event_Released__c</fullName>
        <description>Reflects Released flag value on Billing Event Item&apos;s parent Billing Event</description>
        <formula>IF(OR(ISNULL(pse__Billing_Event_Item__c),ISBLANK(pse__Billing_Event_Item__c),ISNULL(pse__Billing_Event_Item__r.pse__Billing_Event__c),ISBLANK(pse__Billing_Event_Item__r.pse__Billing_Event__c)),$Label.pse__common_label_n_a,IF(pse__Billing_Event_Item__r.pse__Billing_Event__r.pse__Is_Released__c,$Label.pse__common_label_yes,$Label.pse__common_label_no))</formula>
        <label>Billing Event Released</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Billing_Event_Status__c</fullName>
        <description>Status pick list value on Billing Event Item&apos;s parent Billing Event</description>
        <formula>IF(OR(ISNULL(pse__Billing_Event_Item__c),ISBLANK(pse__Billing_Event_Item__c),ISNULL(pse__Billing_Event_Item__r.pse__Billing_Event__c),ISBLANK(pse__Billing_Event_Item__r.pse__Billing_Event__c)),&apos;&apos;,TEXT(pse__Billing_Event_Item__r.pse__Billing_Event__r.pse__Status__c))</formula>
        <label>Billing Event Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Billing_Event__c</fullName>
        <description>Formula hyperlink to the Billing Event (parent record to the Bill Event Item) if any.</description>
        <formula>IF(OR(ISNULL(pse__Billing_Event_Item__c),ISBLANK(pse__Billing_Event_Item__c),ISNULL(pse__Billing_Event_Item__r.pse__Billing_Event__c),ISBLANK(pse__Billing_Event_Item__r.pse__Billing_Event__c)),&apos;&apos;,HYPERLINK(&apos;/&apos;&amp;pse__Billing_Event_Item__r.pse__Billing_Event__c, IF(OR(ISNULL(pse__Billing_Event_Item__r.pse__Billing_Event__r.Name),ISBLANK(pse__Billing_Event_Item__r.pse__Billing_Event__r.Name)),pse__Billing_Event_Item__r.pse__Billing_Event__c,(pse__Billing_Event_Item__r.pse__Billing_Event__r.Name))))</formula>
        <label>Billing Event</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Billing_Hold__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, this item cannot be billed</description>
        <inlineHelpText>Indicates whether billing for the milestone is on hold. When selected, the milestone cannot be billed and is not included when generating billing events.</inlineHelpText>
        <label>Billing Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Closed_for_Expense_Entry__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, indicates that Expense Reports and Expenses may no longer be entered for this Milestone. Is checked automatically when the Milestone&apos;s Project is Closed for Expense Entry.</description>
        <inlineHelpText>Indicates whether expenses can no longer be entered for the milestone.</inlineHelpText>
        <label>Closed for Expense Entry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Closed_for_Time_Entry__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, indicates that Timecards may no longer be entered for this Milestone. Is checked automatically when the Milestone&apos;s Project is Closed for Time Entry.</description>
        <inlineHelpText>Indicates whether timecards can no longer be entered for the milestone.</inlineHelpText>
        <label>Closed for Time Entry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Cost_Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Transaction ID for the cost associated with the milestone.</inlineHelpText>
        <label>Cost Transaction</label>
        <referenceTo>pse__Transaction__c</referenceTo>
        <relationshipLabel>Milestone (Cost Transaction)</relationshipLabel>
        <relationshipName>CostForMilestones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Default_Bill_Rate__c</fullName>
        <description>If configured, Timecards for this Milestone will inherit this Bill Rate.  In order for this to happen, the default-timecard-bill-rate-from-milestone Milestone config must be true (default false) and the &apos;Apply Default Bill Rate to Timecard&apos; checkbox on the Milestone must be checked.  Defaults to and must always be same currency as Project.</description>
        <inlineHelpText>If configured, Timecards for this Milestone will inherit this Bill Rate.  Defaults to and must always be same currency as Project.</inlineHelpText>
        <label>Default Bill Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Default_Bill_Rate_is_Daily_Rate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, this means that the Default Bill Rate value signifies a rate per day rather than a rate per hour.</description>
        <inlineHelpText>If checked, this means that the Default Bill Rate value signifies a rate per day rather than a rate per hour.</inlineHelpText>
        <label>Default Bill Rate is Daily Rate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Description__c</fullName>
        <inlineHelpText>Description of the milestone.</inlineHelpText>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pse__Disable_Project_Task_Hours_Roll_Up__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Determines if project task hours are rolled up on the milestone. The default value is false.</inlineHelpText>
        <label>Disable Project Task Hours Roll Up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Eligible_for_Billing__c</fullName>
        <description>Indicates Milestone is in a state that is eligible for Billing Event Generation (not including the Approved for Billing flag, which may also be required per global config).

This means all of the following conditions must be met:
Billing Hold = false
Exclude from Billing = false
Include In Financials = true
Billed = false
Invoiced = false
Billing Event Item = {blank}
Project = {not blank}
Project&apos;s Account = {not blank}
Project Exclude From Billing = false</description>
        <formula>IF(AND(NOT(pse__Billing_Hold__c),NOT(pse__Exclude_from_Billing__c),pse__Include_In_Financials__c,NOT(pse__Billed__c),NOT(pse__Invoiced__c),OR(ISNULL(pse__Billing_Event_Item__c),ISBLANK(pse__Billing_Event_Item__c)),NOT(OR(ISNULL(pse__Project__c),ISBLANK(pse__Project__c))),NOT(OR(ISNULL(pse__Project__r.pse__Account__c),ISBLANK(pse__Project__r.pse__Account__c))),NOT(pse__Project__r.pse__Exclude_From_Billing__c)),$Label.pse__common_label_yes,$Label.pse__common_label_no)</formula>
        <inlineHelpText>Indicates Milestone is in a state that is eligible for Billing Event Generation (not including the Approved for Billing flag, which may also be required per global config).</inlineHelpText>
        <label>Eligible for Billing</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Estimated_Time_To_Completion__c</fullName>
        <defaultValue>0.00</defaultValue>
        <inlineHelpText>Estimated number of resource hours to complete the milestone.</inlineHelpText>
        <label>Estimated Time To Completion</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Exclude_from_Billing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, never bill this business record.  Same effect as Billing Hold, but intended to reflect a permanent exclusion from Billing Generation.</description>
        <inlineHelpText>If checked, never bill this business record.  Same effect as Billing Hold, but intended to reflect a permanent exclusion from Billing Generation.</inlineHelpText>
        <label>Exclude from Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Include_In_Financials__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates whether the milestone is to be included in project and RPG actuals.</inlineHelpText>
        <label>Include In Financials</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Invoice_Date__c</fullName>
        <inlineHelpText>Invoice date for the milestone.</inlineHelpText>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Invoice_Number__c</fullName>
        <inlineHelpText>Number of the related invoice.</inlineHelpText>
        <label>Invoice Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Invoice_Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The transaction ID of the invoice associated with the milestone.</inlineHelpText>
        <label>Invoice Transaction</label>
        <referenceTo>pse__Transaction__c</referenceTo>
        <relationshipLabel>Milestone (Invoice Transaction)</relationshipLabel>
        <relationshipName>Invoice_Tx_Milestones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Invoiced__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates this milestone has been invoiced.</inlineHelpText>
        <label>Invoiced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Log_Milestone_Cost_As_External__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates whether the costs should be logged as external, such as for external resources working on the milestone.</inlineHelpText>
        <label>Log Milestone Cost As External</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Milestone_Amount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Billable Amount associated with the Milestone itself (not including billable amounts from child Timecards/Expenses).  This is primarily intended to be used for fixed-fee Projects. Defaults to and must always be same currency as Project.</description>
        <inlineHelpText>Billable Amount associated with the Milestone itself (not including billable amounts from child Timecards/Expenses).  This is primarily intended to be used for fixed-fee Projects. Defaults to and must always be same currency as Project.</inlineHelpText>
        <label>Milestone Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Milestone_Cost__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>External fixed-fee cost associated with Milestone, not including any costs associated with child Timecards and Expenses.  This is intended to be used when the vendor cost incurred in fulfilling the Milestone is itself fixed-fee, and thus not captured in Timecards/Expenses.  Defaults to and must always be same currency as Project.</description>
        <inlineHelpText>External fixed-fee cost associated with Milestone, not including any costs associated with child Timecards and Expenses.  Defaults to and must always be same currency as Project.</inlineHelpText>
        <label>Milestone Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Non_Billable_Days_In_Financials__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of non-billable days logged against the milestone that can be viewed in project and RPG actuals.</inlineHelpText>
        <label>Non-Billable Days In Financials</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Non_Billable_Days_Submitted__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of non-billable days logged against the milestone.</inlineHelpText>
        <label>Non-Billable Days Submitted</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Non_Billable_Expenses_In_Financials__c</fullName>
        <defaultValue>0.00</defaultValue>
        <inlineHelpText>Non-billable expenses logged against the milestone that can be viewed in project and RPG actuals.</inlineHelpText>
        <label>Non-Billable Expenses In Financials</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Non_Billable_Expenses_Submitted__c</fullName>
        <defaultValue>0.00</defaultValue>
        <inlineHelpText>Non-billable expenses logged against the milestone.</inlineHelpText>
        <label>Non-Billable Expenses Submitted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Non_Billable_Hours_In_Financials__c</fullName>
        <defaultValue>0.00</defaultValue>
        <inlineHelpText>Number of non-billable hours logged against the milestone that can be viewed in project and RPG actuals.</inlineHelpText>
        <label>Non-Billable Hours In Financials</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Non_Billable_Hours_Submitted__c</fullName>
        <defaultValue>0.00</defaultValue>
        <inlineHelpText>Number of non-billable hours logged against the milestone.</inlineHelpText>
        <label>Non-Billable Hours Submitted</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Override_Project_Group_Currency_Code__c</fullName>
        <formula>TEXT(pse__Override_Project_Group__r.CurrencyIsoCode)</formula>
        <inlineHelpText>Currency code of the currency selected on the Override project group</inlineHelpText>
        <label>Override Project Group Currency Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Override_Project_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If this field is set, it overrides the Group to which a Milestone&apos;s Transactions will roll up for Group Actuals, even if its Project is in a different Group.  Typically a Milestone&apos;s Transactions roll up to its Project&apos;s Group.  Note that either way, the Transactions will continue to roll up to the same Project&apos;s Project Actuals.</description>
        <inlineHelpText>If this field is set, it overrides the Group to which a Milestone&apos;s Transactions will roll up for Group Actuals, even if its Project is in a different Group. Typically a Milestone&apos;s Transactions roll up to its Project&apos;s Group.</inlineHelpText>
        <label>Override Project Group</label>
        <referenceTo>pse__Grp__c</referenceTo>
        <relationshipLabel>Override Group For Milestones</relationshipLabel>
        <relationshipName>Override_Group_For_Milestones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Override_Project_Practice_Currency_Code__c</fullName>
        <formula>TEXT(pse__Override_Project_Practice__r.CurrencyIsoCode)</formula>
        <inlineHelpText>Currency code of the currency selected on the Override project practice</inlineHelpText>
        <label>Override Project Practice Currency Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Override_Project_Practice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If this field is set, it overrides the Practice to which a Milestone&apos;s Transactions will roll up for Practice Actuals, even if its Project is in a different Practice.  Typically a Milestone&apos;s Transactions roll up to its Project&apos;s Practice.  Note that either way, the Transactions will continue to roll up to the same Project&apos;s Project Actuals.</description>
        <inlineHelpText>If this field is set, it overrides the Practice to which a Milestone&apos;s Transactions will roll up for Practice Actuals, even if its Project is in a different Practice.  Typically a Milestone&apos;s Transactions roll up to its Project&apos;s Practice.</inlineHelpText>
        <label>Override Project Practice</label>
        <referenceTo>pse__Practice__c</referenceTo>
        <relationshipLabel>Override Practice For Milestones</relationshipLabel>
        <relationshipName>Override_Practice_For_Milestones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Override_Project_Region_Currency_Code__c</fullName>
        <formula>TEXT(pse__Override_Project_Region__r.CurrencyIsoCode)</formula>
        <inlineHelpText>Currency code of the currency selected on the Override project/region</inlineHelpText>
        <label>Override Project Region Currency Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Override_Project_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If this field is set, it overrides the Region to which a Milestone&apos;s Transactions will roll up for Regional Actuals, even if its Project is in a different Region.  Typically a Milestone&apos;s Transactions roll up to its Project&apos;s Region.  Note that either way, the Transactions will continue to roll up to the same Project&apos;s Project Actuals.</description>
        <inlineHelpText>If this field is set, it overrides the Region to which a Milestone&apos;s Transactions will roll up for Regional Actuals, even if its Project is in a different Region.  Typically a Milestone&apos;s Transactions roll up to its Project&apos;s Region.</inlineHelpText>
        <label>Override Project Region</label>
        <referenceTo>pse__Region__c</referenceTo>
        <relationshipLabel>Override Region For Milestones</relationshipLabel>
        <relationshipName>Override_Region_For_Milestones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Percent_Hours_Completed_For_Recognition__c</fullName>
        <description>Percentage of hours completed on this milestone, to be used in Revenue Forecasting calculations. When you run a revenue forecast on the project that relates to this milestone, the following calculation is used to work out the value in this field: (Sum of approved timecard hours /Value in Planned Hours field) multiplied by 100.
        This field is only populated when &quot;% Complete&quot; is displayed in the Recognition Method field, or when you are using the integration with FinancialForce Revenue Management and this milestone looks up to a FinancialForce Revenue Management template of type &quot;% Complete&quot;.</description>
        <inlineHelpText>Percentage of hours completed, for Revenue Forecasting calculations using the &quot;% Complete&quot; recognition method. The value is (Sum of approved timecard hours /Value in Planned Hours field) multiplied by 100.</inlineHelpText>
        <label>% Hours Completed for Recognition</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Planned_Hours__c</fullName>
        <inlineHelpText>The number of total hours from all resources for this milestone</inlineHelpText>
        <label>Planned Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Project_Currency_Exchange_Rate__c</fullName>
        <description>Project (Bill Rate) Exchange Rate, relative to corporate currency, calculated on the actual or the target date of the milestone.</description>
        <inlineHelpText>Project (Bill Rate) Exchange Rate, relative to corporate currency, calculated on the actual or the target date of the milestone.</inlineHelpText>
        <label>Project Currency Exchange Rate</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Project_Task_Hours__c</fullName>
        <inlineHelpText>The total number of project task hours entered for timecards against this Assignment. Do not manually edit this field.</inlineHelpText>
        <label>Project Task Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup to the related project.</inlineHelpText>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Milestones</relationshipLabel>
        <relationshipName>Milestones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Recognition_Method__c</fullName>
        <description>The recognition method to apply to this record for revenue forecasting.</description>
        <inlineHelpText>The recognition method to apply to this record for revenue forecasting.</inlineHelpText>
        <label>Recognition Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>pse__Recognition_Method</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Requires_Customer_Sign_off__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates whether this milestone requires customer sign-off.</inlineHelpText>
        <label>Requires Customer Sign-off</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Start_Date__c</fullName>
        <description>The start date of this milestone.</description>
        <inlineHelpText>The start date of this milestone.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
</CustomObject>